# ms-channel-sorter-ai

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: upload.yml
app/: .env  clustering.py  config.py  db.py  input.py  models.py  routes.py  schemas.py
tests/: test_routes.py
