[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ms-channel-sorter-ai"
version = "1.0.0"
description = "Um projeto em Python para desenvolvimento de API e clustering"
authors = ["Seu Nome <seu.email@exemplo.com>"]

# Dependências principais
[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.1"
fastapi = "^0.95.2"
uvicorn = "^0.21.1"
pymongo = "^4.2.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
faker = "^9.0.2"
pandas = "^1.5.3"
python-dateutil = "^2.8.2"
pytz = "^2024.2"
tzdata = "^2022.7"

# Dependências de desenvolvimento
[tool.poetry.dev-dependencies]
pytest = "^7.0"
